--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 
 # Base de datos Supabase (REEMPLAZA CON TUS DATOS)
 spring.datasource.url=jdbc:postgresql://db.TU_PROYECTO.supabase.co:5432/postgres
+#spring.datasource.url=jdbc:postgresql://https://zskuikxfcjobpygoueqp.supabase.co
 spring.datasource.username=postgres
 spring.datasource.password=TU_PASSWORD
 
